--- a/nivelA/unidade4/index.html
+++ b/nivelA/unidade4/index.html
@@ -6,21 +6,23 @@
     <style>
         body {
             font-family: Arial, sans-serif;
+            background-color: #f4f4f9;
             margin: 0;
             padding: 0;
+            display: flex;
+            flex-direction: column;
             height: 100vh;
-            overflow-y: scroll; /* Permitir scroll vertical */
         }
 
-        /* Espaço para o título */
+        /* Espaço em branco para o título */
         .header {
             width: 100%;
             height: 15%; /* Espaço reservado para o título */
-            position: absolute; /* O título ficará sobre a imagem de fundo */
-            z-index: 3; /* Certificar que o título fique acima de tudo */
+            background-color: white; /* Espaço branco */
             display: flex;
             justify-content: center;
             align-items: center;
+            z-index: 3; /* Certificar que o título fique acima de tudo */
         }
 
         .title {
@@ -28,30 +30,26 @@
             font-family: "Times New Roman", Times, serif; /* Alterar para Arial se necessário */
             color: #333;
             margin: 0;
-            background-color: rgba(255, 255, 255, 0.8); /* Fundo semi-transparente para destacar o título */
-            padding: 10px 20px;
-            border-radius: 10px;
         }
 
-        /* Mapa de fundo cobrindo toda a tela, incluindo a área do título */
+        /* Mapa de fundo repetido em ambas direções com aumento de tamanho */
         .map-container {
             width: 100%;
-            height: 200vh; /* Aumenta a altura para permitir scroll vertical */
-            background-image: url('../../imagens/map_background.png'); /* Substitua pela imagem correta */
-            background-repeat: repeat; /* Repetir a imagem em ambas direções */
-            background-size: 200%; /* Ajusta o tamanho da imagem de fundo */
-            position: absolute;
-            top: 0;
-            left: 0;
-            z-index: 1; /* O fundo está na camada inferior */
+            min-height: 100vh; /* Garante que o fundo cubra pelo menos a altura da tela */
+            background-image: url('././imagens/map_background.png'); /* Substitua pela imagem correta */
+            background-repeat: repeat; /* Repetir o fundo em ambas direções */
+            background-size: 200%; /* Aumenta o tamanho da imagem de fundo */
+            position: relative;
+            z-index: 1;
         }
 
         /* Overlay para atividades e bonequinho */
         .overlay-container {
-            position: relative;
+            position: absolute;
+            top: 15%; /* Mesma altura que o título */
             width: 100%;
-            height: 200vh; /* Ocupar toda a área disponível */
-            z-index: 2; /* Círculos e bonequinho estão acima do fundo */
+            height: 85%; /* Mesma altura da imagem de fundo */
+            z-index: 2; /* Os elementos estão acima do mapa */
         }
 
         .phase {
@@ -61,7 +59,7 @@
             align-items: center;
             background-color: rgba(255, 255, 255, 0.8); /* Fundo transparente */
             border-radius: 50%;
-            padding: 10px; /* Círculos maiores */
+            padding: 5px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             transition: transform 0.3s ease, box-shadow 0.3s ease;
             cursor: pointer;
@@ -90,18 +88,17 @@
             transform: translate(-50%, -50%);
             width: 25px;
             height: 25px;
-            z-index: 3;
+            z-index: 2;
         }
 
         .character {
             position: absolute;
             transition: top 1s, left 1s; /* Animação suave para o movimento do bonequinho */
-            z-index: 3; /* Garante que o bonequinho fique acima do fundo */
         }
 
         .character img {
-            width: 150px; /* Aumenta o tamanho do bonequinho */
-            height: 150px;
+            width: 100%;
+            height: 100%;
         }
 
         /* Linha curva mais grossa e pontilhada */
@@ -115,26 +112,26 @@
         /* Ajustes para telas pequenas (celulares na vertical) */
         @media (max-width: 599px) {
             .phase {
-                width: 200px; /* Aumentar o tamanho dos círculos no celular */
-                height: 200px;
+                width: 140px; /* Dobrar o tamanho dos círculos */
+                height: 140px;
             }
 
             .character {
-                width: 150px; /* Bonequinho maior */
-                height: 150px;
+                width: 120px; /* Bonequinho maior */
+                height: 120px;
             }
         }
 
-        /* Ajustes de responsividade para os círculos e bonequinho em telas maiores */
+        /* Ajustes de responsividade para os círculos e bonequinho */
         @media (min-width: 600px) {
             .phase {
-                width: 150px;
-                height: 150px;
+                width: 100px;
+                height: 100px;
             }
 
             .character {
-                width: 150px; /* Tamanho do bonequinho */
-                height: 150px;
+                width: 100px; /* Aumenta o tamanho do bonequinho em todas as situações */
+                height: 100px;
             }
         }
 
@@ -142,6 +139,7 @@
         html, body {
             width: 100%;
             height: 100%;
+            overflow: hidden; /* Elimina rolagens */
         }
     </style>
 </head>
@@ -151,7 +149,7 @@
         <h1 class="title">Hannah English Course</h1>
     </div>
 
-    <!-- Mapa de fundo cobrindo toda a tela -->
+    <!-- Mapa de fundo -->
     <div class="map-container"></div>
 
     <!-- Overlay para atividades e bonequinho -->
@@ -166,7 +164,7 @@
             { id: 3, name: "Activity 3", top: '50%', left: '45%', locked: true, image: 'botoes/memorygame_button.png', link: '../unidade2/MemoryGame/index.html' },
             { id: 4, name: "Activity 4", top: '70%', left: '60%', locked: true, image: 'botoes/quiz_button.png', link: '../unidade2/QUIZ/index.html' },
             { id: 5, name: "Activity 5", top: '85%', left: '75%', locked: true, image: 'botoes/wordsearch_button.png', link: '../unidade2/WordSearch/index.html' },
-            { id: 6, name: "Activity 6", top: '120%', left: '90%', locked: true, image: 'botoes/grammar_button.png', link: '../unidade2/Grammar/index.html' }
+            { id: 6, name: "Activity 6", top: '65%', left: '90%', locked: true, image: 'botoes/grammar_button.png', link: '../unidade2/Grammar/index.html' }
         ];
 
         // Função para gerar as fases e a linha curva
