--- a/nivelA/unidade4/index.html
+++ b/nivelA/unidade4/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curved Dotted Line with Delayed Link</title>
+    <title>Curved Dotted Line with Scroll Down</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -10,25 +10,24 @@
             margin: 0;
             padding: 0;
             display: flex;
-            justify-content: center;
-            align-items: center;
             flex-direction: column;
             height: 100vh;
+            overflow-x: hidden; /* Desativa o scroll horizontal */
         }
 
         .map-container {
             width: 100%;
-            height: 100%;
+            min-height: 100vh;
             background-image: url('../../imagens/map_background.png'); /* Substituir pela imagem correta do mapa */
             background-repeat: repeat; /* Repetir a imagem em ambas direções */
-            background-size: contain; /* Garante que a imagem cubra todo o fundo e se repita */
+            background-size: 200%; /* Aumenta o tamanho da imagem */
             position: relative;
         }
 
         .title {
             text-align: center;
             font-size: 36px;
-            font-family: "Times New Roman", Times, serif; /* Alterar para Arial se necessário */
+            font-family: "Times New Roman", Times, serif;
             color: #333;
             margin-bottom: 20px;
         }
@@ -38,7 +37,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: rgba(255, 255, 255, 0.8); /* Fundo transparente */
+            background-color: rgba(255, 255, 255, 0.8);
             border-radius: 50%;
             padding: 5px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -47,14 +46,14 @@
         }
 
         .phase img {
-            width: 100%; /* O tamanho da imagem será ajustado pelo contêiner da fase */
+            width: 100%;
             height: 100%;
             border-radius: 50%;
         }
 
         .phase:hover {
-            transform: scale(1.5); /* Ampliação maior no hover */
-            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.4); /* Sombra mais forte ao hover */
+            transform: scale(1.5);
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.4);
         }
 
         .locked img {
@@ -62,7 +61,7 @@
         }
 
         .locked::after {
-            content: url('../../imagens/lock_icon_resized.png'); /* Ícone de cadeado */
+            content: url('../../imagens/lock_icon_resized.png');
             position: absolute;
             top: 50%;
             left: 50%;
@@ -74,7 +73,7 @@
 
         .character {
             position: absolute;
-            transition: top 1s, left 1s; /* Animação suave para o movimento do bonequinho */
+            transition: top 1s, left 1s;
         }
 
         .character img {
@@ -82,15 +81,15 @@
             height: 100%;
         }
 
-        /* Linha curva mais grossa e pontilhada */
+        /* Linha curva pontilhada */
         svg path {
             fill: none;
             stroke: red;
-            stroke-width: 8; /* Linha mais grossa */
-            stroke-dasharray: 15; /* Linha pontilhada */
+            stroke-width: 8;
+            stroke-dasharray: 15;
         }
 
-        /* Responsividade */
+        /* Responsividade para telas maiores */
         @media (min-width: 1024px) {
             .phase {
                 width: 100px;
@@ -103,6 +102,7 @@
             }
         }
 
+        /* Ajustes para tablets */
         @media (min-width: 600px) and (max-width: 1023px) {
             .phase {
                 width: 130px;
@@ -115,7 +115,8 @@
             }
         }
 
-        @media (max-width: 599px) {
+        /* Ajustes para celulares em orientação horizontal */
+        @media (max-width: 599px) and (orientation: landscape) {
             .phase {
                 width: 150px;
                 height: 150px;
@@ -124,6 +125,19 @@
             .character {
                 width: 120px;
                 height: 120px;
+            }
+        }
+
+        /* Ajustes para celulares em orientação vertical (em pé) */
+        @media (max-width: 599px) and (orientation: portrait) {
+            .phase {
+                width: 375px; /* 2,5 vezes maior que 150px */
+                height: 375px;
+            }
+
+            .character {
+                width: 300px; /* Bonequinho maior */
+                height: 300px;
             }
         }
     </style>
