--- a/nivelA/unidade4/index.html
+++ b/nivelA/unidade4/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curved Dotted Line with Scroll Down</title>
+    <title>Curved Dotted Line with Large Circles on Mobile</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -131,13 +131,13 @@
         /* Ajustes para celulares em orientação vertical (em pé) */
         @media (max-width: 599px) and (orientation: portrait) {
             .phase {
-                width: 375px; /* 2,5 vezes maior que 150px */
-                height: 375px;
+                width: 400px; /* Aumento significativo dos círculos */
+                height: 400px;
             }
 
             .character {
-                width: 300px; /* Bonequinho maior */
-                height: 300px;
+                width: 150px; /* Tamanho maior do bonequinho */
+                height: 150px;
             }
         }
     </style>
