--- a/nivelA/unidade4/index.html
+++ b/nivelA/unidade4/index.html
@@ -1,279 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curved Dotted Line with Large Circles on Mobile</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f9;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            height: 100vh;
-            overflow-x: hidden; /* Desativa o scroll horizontal */
-        }
-
-        .map-container {
-            width: 100%;
-            min-height: 100vh;
-            background-image: url('../../imagens/map_background.png'); /* Substituir pela imagem correta do mapa */
-            background-repeat: repeat; /* Repetir a imagem em ambas direções */
-            background-size: 200%; /* Aumenta o tamanho da imagem */
-            position: relative;
-        }
-
-        .title {
-            text-align: center;
-            font-size: 36px;
-            font-family: "Times New Roman", Times, serif;
-            color: #333;
-            margin-bottom: 20px;
-        }
-
-        .phase {
-            position: absolute;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color: rgba(255, 255, 255, 0.8);
-            border-radius: 50%;
-            padding: 5px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-            cursor: pointer;
-        }
-
-        .phase img {
-            width: 100%;
-            height: 100%;
-            border-radius: 50%;
-        }
-
-        .phase:hover {
-            transform: scale(1.5);
-            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.4);
-        }
-
-        .locked img {
-            filter: grayscale(100%);
-        }
-
-        .locked::after {
-            content: url('../../imagens/lock_icon_resized.png');
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            width: 25px;
-            height: 25px;
-            z-index: 2;
-        }
-
-        .character {
-            position: absolute;
-            transition: top 1s, left 1s;
-        }
-
-        .character img {
-            width: 100%;
-            height: 100%;
-        }
-
-        /* Linha curva pontilhada */
-        svg path {
-            fill: none;
-            stroke: red;
-            stroke-width: 8;
-            stroke-dasharray: 15;
-        }
-
-        /* Responsividade para telas maiores */
-        @media (min-width: 1024px) {
-            .phase {
-                width: 100px;
-                height: 100px;
-            }
-
-            .character {
-                width: 80px;
-                height: 80px;
-            }
-        }
-
-        /* Ajustes para tablets */
-        @media (min-width: 600px) and (max-width: 1023px) {
-            .phase {
-                width: 130px;
-                height: 130px;
-            }
-
-            .character {
-                width: 90px;
-                height: 90px;
-            }
-        }
-
-        /* Ajustes para celulares em orientação horizontal */
-        @media (max-width: 599px) and (orientation: landscape) {
-            .phase {
-                width: 150px;
-                height: 150px;
-            }
-
-            .character {
-                width: 120px;
-                height: 120px;
-            }
-        }
-
-        /* Ajustes para celulares em orientação vertical (em pé) */
-        @media (max-width: 599px) and (orientation: portrait) {
-            .phase {
-                width: 400px; /* Aumento significativo dos círculos */
-                height: 400px;
-            }
-
-            .character {
-                width: 150px; /* Tamanho maior do bonequinho */
-                height: 150px;
-            }
-        }
-    </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Interactive Phase Map</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="title">Hannah English Course</div>
-
     <div class="map-container" id="mapContainer">
-        <svg width="100%" height="100%" id="lineContainer"></svg> <!-- Contêiner para a linha curva -->
+        <!-- Adicione aqui elementos como o título e o mapa -->
     </div>
-
-    <script>
-        const activities = [
-            { id: 1, name: "Activity 1", top: '10%', left: '10%', locked: false, image: 'botoes/storycards_button.png', link: '../unidade2/StoryCards/index.html' },
-            { id: 2, name: "Activity 2", top: '25%', left: '25%', locked: true, image: 'botoes/flashcards_button.png', link: '../unidade2/Flashcards/index.html' },
-            { id: 3, name: "Activity 3", top: '50%', left: '45%', locked: true, image: 'botoes/memorygame_button.png', link: '../unidade2/MemoryGame/index.html' },
-            { id: 4, name: "Activity 4", top: '70%', left: '60%', locked: true, image: 'botoes/quiz_button.png', link: '../unidade2/QUIZ/index.html' },
-            { id: 5, name: "Activity 5", top: '85%', left: '75%', locked: true, image: 'botoes/wordsearch_button.png', link: '../unidade2/WordSearch/index.html' },
-            { id: 6, name: "Activity 6", top: '65%', left: '90%', locked: true, image: 'botoes/grammar_button.png', link: '../unidade2/Grammar/index.html' }
-        ];
-
-        // Função para gerar as fases e a linha curva
-        function generatePhases() {
-            const mapContainer = document.getElementById('mapContainer');
-            const lineContainer = document.getElementById('lineContainer');
-
-            lineContainer.innerHTML = ''; // Limpar qualquer linha anterior ao redesenhar
-            let pathD = ''; // Caminho para o atributo "d" do SVG
-
-            activities.forEach((activity, index) => {
-                const phaseDiv = document.createElement('div');
-                phaseDiv.classList.add('phase');
-                if (activity.locked) {
-                    phaseDiv.classList.add('locked');
-                }
-
-                const img = document.createElement('img');
-                img.src = `../../imagens/${activity.image}`;
-                img.alt = activity.name;
-                phaseDiv.appendChild(img);
-
-                phaseDiv.style.top = activity.top;
-                phaseDiv.style.left = activity.left;
-
-                phaseDiv.addEventListener('click', function () {
-                    if (!activity.locked) {
-                        moveCharacterToPhase(index, activity.link); 
-                        unlockNextPhase(index); 
-                    } else {
-                        alert('This phase is locked.');
-                    }
-                });
-
-                mapContainer.appendChild(phaseDiv);
-
-                // Adiciona o centro de cada fase ao caminho da linha
-                const topValue = parseFloat(activity.top);
-                const leftValue = parseFloat(activity.left);
-                const x = (leftValue / 100) * mapContainer.clientWidth;
-                const y = (topValue / 100) * mapContainer.clientHeight;
-
-                if (index === 0) {
-                    pathD += `M ${x},${y} `; // "M" para o primeiro ponto
-                } else {
-                    const prevActivity = activities[index - 1];
-                    const prevTopValue = parseFloat(prevActivity.top);
-                    const prevLeftValue = parseFloat(prevActivity.left);
-                    const prevX = (prevLeftValue / 100) * mapContainer.clientWidth;
-                    const prevY = (prevTopValue / 100) * mapContainer.clientHeight;
-
-                    // Bézier curva entre os pontos
-                    const controlX = (prevX + x) / 2; // Ponto de controle no meio da linha
-                    pathD += `C ${controlX},${prevY} ${controlX},${y} ${x},${y} `;
-                }
-            });
-
-            // Adiciona o caminho ao SVG
-            const path = document.createElementNS("http://www.w3.org/2000/svg", "path");
-            path.setAttribute("d", pathD);
-            lineContainer.appendChild(path);
-
-            // Adiciona o bonequinho
-            addCharacter();
-        }
-
-        // Função para adicionar o bonequinho no mapa
-        function addCharacter() {
-            const character = document.createElement('div');
-            character.classList.add('character');
-            character.id = 'gameCharacter';
-
-            const characterImg = document.createElement('img');
-            characterImg.src = '../../imagens/bonequinho.png';
-            character.appendChild(characterImg);
-
-            const firstPhase = activities[0];
-            character.style.top = firstPhase.top;
-            character.style.left = firstPhase.left;
-
-            document.getElementById('mapContainer').appendChild(character);
-        }
-
-        // Função para mover o bonequinho e abrir o link após o movimento
-        function moveCharacterToPhase(phaseIndex, link) {
-            if (phaseIndex >= activities.length) return;
-
-            const character = document.getElementById('gameCharacter');
-            const targetPhase = activities[phaseIndex];
-
-            // Mover o bonequinho para a nova posição
-            character.style.top = targetPhase.top;
-            character.style.left = targetPhase.left;
-
-            // Abrir o link da atividade após o movimento (tempo calculado com base no CSS transition de 1s)
-            setTimeout(() => {
-                window.location.href = link;
-            }, 1000); // 1000ms = 1 segundo (mesmo tempo da animação)
-        }
-
-        // Função para desbloquear a próxima fase
-        function unlockNextPhase(phaseIndex) {
-            const nextPhaseIndex = phaseIndex + 1;
-            if (nextPhaseIndex < activities.length) {
-                activities[nextPhaseIndex].locked = false;
-                const nextPhaseDiv = document.getElementsByClassName('phase')[nextPhaseIndex];
-                nextPhaseDiv.classList.remove('locked');
-            }
-        }
-
-        // Chama a função ao carregar a página
-        window.onload = generatePhases;
-
-        // Redesenhar linhas ao redimensionar a janela
-        window.onresize = function() {
-            generatePhases();
-        };
-    </script>
+    <script src="js/script.js"></script>
 </body>
 </html>
