--- a/nivelA/unidade4/index.html
+++ b/nivelA/unidade4/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="map-container" id="mapContainer">
         <!-- Adicione aqui elementos como o título e o mapa -->
-        <h1 style="color: black;">Hannah English</h1> <!-- Título temporário para teste -->
+        <h1 style="color: black;">Hannah English Course</h1> <!-- Título temporário para teste -->
     </div>
     <script src="js/script.js"></script>
 </body>
