--- a/nivelA/unidade4/index.html
+++ b/nivelA/unidade4/index.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hannah English Course</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css"> <!-- Agora o CSS está junto com o HTML -->
 </head>
 <body>
     <div class="map-container" id="mapContainer">
-        <!-- Adicione aqui elementos como o título e o mapa -->
         <h1 style="color: black;">Teste de Fundo</h1> <!-- Título temporário para teste -->
     </div>
-    <script src="js/script.js"></script>
+    <script src="script.js"></script> <!-- Agora o JS está junto com o HTML -->
 </body>
 </html>
