--- a/nivelA/unidade4/index.html
+++ b/nivelA/unidade4/index.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Imagem de título centralizada no topo -->
-    <div class="title-container">
-        <img src="../../imagens/titulo.png" alt="Hannah English Course" class="title-image">
-    </div>
-
     <div class="map-container" id="mapContainer">
+        <!-- Imagem de título centralizada sobre o fundo -->
+        <div class="title-container">
+            <img src="../../imagens/titulo.png" alt="Hannah English Course" class="title-image">
+        </div>
+
+        <!-- SVG para as linhas -->
         <svg id="linesSvg" class="lines-svg"></svg>
     </div>
 
