--- a/nivelA/unidade4/index.html
+++ b/nivelA/unidade4/index.html
@@ -1,21 +1,62 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hannah English Course</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <!-- Imagem de título centralizada sobre o fundo -->
-    <div class="title-container">
-        <img src="../../imagens/titulo.png" alt="Hannah English Course" class="title-image">
-    </div>
+/* Estilo para o contêiner do título */
+.title-container {
+    position: absolute;
+    top: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 20;
+    text-align: center;
+}
 
-    <div class="map-container" id="mapContainer">
-        <svg id="linesSvg" class="lines-svg"></svg>
-    </div>
+/* Estilo da imagem de título */
+.title-image {
+    max-width: 100%;
+    height: auto;
+    width: 300px; /* Ajuste conforme o tamanho da imagem desejada */
+}
 
-    <script src="script.js"></script>
-</body>
-</html>
+/* Contêiner do mapa ajustado para scroll */
+.map-container {
+    width: 100%;
+    height: 100vh; /* Exibe apenas a altura da tela */
+    position: relative;
+    background-image: url('../../imagens/fundo.png');
+    background-repeat: repeat;
+    background-size: 200%;
+    overflow-y: auto; /* Habilita o scroll vertical */
+    scroll-behavior: smooth; /* Rolagem suave */
+}
+
+/* Contêiner da grade invisível */
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr); /* 4 colunas para telas maiores */
+    grid-gap: 3rem; /* Espaçamento maior para notebooks */
+    padding: 50px;
+}
+
+/* Estilo das fases (círculos) */
+.phase {
+    width: 4rem; /* Aproximadamente 4 cm no notebook */
+    height: 4rem;
+    border-radius: 50%;
+    background-color: rgba(255, 255, 255, 0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transition: transform 0.3s ease;
+}
+
+/* Ajuste para manter a responsividade */
+@media (max-width: 768px) {
+    .grid-container {
+        grid-template-columns: repeat(2, 1fr); /* 2 colunas em telas pequenas */
+        grid-gap: 1rem; /* Ajuste menor para o espaçamento */
+    }
+
+    .phase {
+        width: 10vw; /* Aproximadamente 1.5 cm no celular */
+        height: 10vw;
+    }
+}
