--- a/nivelA/unidade4/index.html
+++ b/nivelA/unidade4/index.html
@@ -4,18 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hannah English Course</title>
-    <link rel="stylesheet" href="style.css"> <!-- Certifique-se de que o caminho esteja correto -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Imagem de título centralizada sobre o fundo -->
     <div class="title-container">
-        <img src="../../imagens/titulo.png" alt="Hannah English Course" class="title-image">
+        <img src="../../imagens/hannah_english_course_title.png" class="title-image" alt="Hannah English Course">
     </div>
 
-    <div class="map-container" id="mapContainer">
-        <svg id="linesSvg" class="lines-svg"></svg>
+    <div class="map-container">
+        <div class="phase unlocked" style="top: 100px; left: 100px;">
+            <a href="../unidade2/StoryCards/index.html">
+                <img src="../../imagens/botoes/storycards_button.png" alt="StoryCards">
+            </a>
+        </div>
+        <div class="phase locked" style="top: 250px; left: 300px;">
+            <a href="../unidade2/Flashcards/index.html" class="disabled-link">
+                <img src="../../imagens/botoes/flashcards_button.png" alt="Flashcards">
+            </a>
+            <img src="../../imagens/lock_icon_resized.png" class="lock-icon">
+        </div>
+        <div class="phase locked" style="top: 400px; left: 500px;">
+            <a href="../unidade2/MemoryGame/index.html" class="disabled-link">
+                <img src="../../imagens/botoes/memorygame_button.png" alt="MemoryGame">
+            </a>
+            <img src="../../imagens/lock_icon_resized.png" class="lock-icon">
+        </div>
+        <div class="phase locked" style="top: 550px; left: 700px;">
+            <a href="../unidade2/QUIZ/index.html" class="disabled-link">
+                <img src="../../imagens/botoes/quiz_button.png" alt="QUIZ">
+            </a>
+            <img src="../../imagens/lock_icon_resized.png" class="lock-icon">
+        </div>
+        <img src="../../imagens/bonequinho.png" class="player" style="top: 70px; left: 70px;">
     </div>
 
-    <script src="script.js"></script> <!-- Certifique-se de que o caminho esteja correto -->
+    <script src="script.js"></script>
 </body>
 </html>
