--- a/nivelA/unidade4/index.html
+++ b/nivelA/unidade4/index.html
@@ -7,11 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Contêiner do título -->
     <div class="title-container">
         <img src="../../imagens/hannah_english_course_title.png" class="title-image" alt="Hannah English Course">
     </div>
 
+    <!-- Contêiner do mapa -->
     <div class="map-container">
+        <!-- Fases -->
         <div class="phase unlocked" style="top: 100px; left: 100px;">
             <a href="../unidade2/StoryCards/index.html">
                 <img src="../../imagens/botoes/storycards_button.png" alt="StoryCards">
@@ -35,7 +38,15 @@
             </a>
             <img src="../../imagens/lock_icon_resized.png" class="lock-icon">
         </div>
+        <!-- Bonequinho -->
         <img src="../../imagens/bonequinho.png" class="player" style="top: 70px; left: 70px;">
+        
+        <!-- SVG para as linhas entre as fases -->
+        <svg class="connections">
+            <path d="M 150 150 Q 200 200, 250 300" />
+            <path d="M 300 300 Q 400 400, 500 500" />
+            <path d="M 500 500 Q 600 600, 700 700" />
+        </svg>
     </div>
 
     <script src="script.js"></script>
