--- a/nivelA/unidade4/StoryCards/index.html
+++ b/nivelA/unidade4/StoryCards/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hannah StoryCard</title>
     <style>
-        /* Estilos existentes */
+        /* Estilos existentes... */
         body {
             font-family: 'Roboto', sans-serif;
             margin: 0;
@@ -18,7 +18,7 @@
             flex-direction: column;
             min-height: 100vh;
         }
-
+        /* Outros estilos... */
         .container {
             max-width: 900px;
             width: 100%;
@@ -29,7 +29,6 @@
             border-radius: 10px;
             overflow: hidden;
         }
-
         button {
             margin: 20px;
             padding: 15px 30px;
@@ -39,8 +38,8 @@
             border: none;
             border-radius: 50px;
             cursor: pointer;
+            transition: background-color 0.3s ease, box-shadow 0.3s ease;
         }
-
         button:hover {
             background-color: #45a049;
         }
@@ -48,10 +47,10 @@
 </head>
 <body>
 
-    <!-- Botão para voltar -->
-    <button onclick="window.location.href='../index.html'" style="margin: 20px; padding: 15px 30px; font-size: 18px; background-color: #4CAF50; color: white; border: none; border-radius: 50px; cursor: pointer;">
-        Back
-    </button>
+<!-- Botão de retorno -->
+<button onclick="window.location.href='../index.html'" style="margin: 20px; padding: 15px 30px; font-size: 18px; background-color: #4CAF50; color: white; border: none; border-radius: 50px; cursor: pointer;">
+    Back
+</button>
 
     <div class="container">
         <h1>Hannah StoryCard</h1>
@@ -81,17 +80,17 @@
             }, 500);  // Aguarda meio segundo antes de redirecionar
         }
 
-        // Evento para chamar a função ao clicar no botão "Concluir Fase"
+        // Chame a função ao clicar no botão 'Concluir Fase'
         document.getElementById('concluirFase').addEventListener('click', function() {
             completePhase(0);  // Salva o progresso da fase 0 (primeira fase)
         });
 
-        // Código existente para carregar o conteúdo e exibir os cartões
+        // Funções existentes para carregar e mostrar o conteúdo
         let showText = false;
         let speechSynthesis = window.speechSynthesis;
         let currentUtterance = null;
-        let storyTitle = '';  // Variável para armazenar o título para o PDF
-        let storyText = '';   // Variável para armazenar o texto completo da história para o PDF
+        let storyTitle = ''; // Variable to hold the title for PDF generation
+        let storyText = '';  // Variable to hold the full story text for PDF
 
         async function loadContent() {
             const response = await fetch('images.txt');
@@ -100,15 +99,15 @@
             const cards = [];
             let currentImage = '';
             let currentText = '';
-            storyText = '';  // Limpa o texto da história para o PDF
+            storyText = '';  // Clear the story text for PDF
 
             lines.forEach(line => {
                 if (line.startsWith('#title:')) {
-                    storyTitle = line.replace('#title:', '').trim();  // Extraindo o título
+                    storyTitle = line.replace('#title:', '').trim();  // Extracting the title
                 } else if (line.startsWith('#')) {
                     if (currentImage && currentText) {
                         cards.push({ image: currentImage, text: currentText });
-                        storyText += '    ' + currentText + '\n';  // Adiciona indentação em cada parágrafo no PDF
+                        storyText += '    ' + currentText + '\n';  // Add indentation to each paragraph in PDF
                     }
                     currentImage = line.replace('#', '').trim();
                     currentText = '';
@@ -118,7 +117,7 @@
             });
             if (currentImage && currentText) {
                 cards.push({ image: currentImage, text: currentText });
-                storyText += '    ' + currentText + '\n';  // Adiciona indentação ao último parágrafo
+                storyText += '    ' + currentText + '\n';  // Add indentation to last paragraph
             }
 
             document.getElementById('storyTitle').innerText = storyTitle;
@@ -136,6 +135,7 @@
                     ? `<div class="card-text"><p>${card.text}</p></div>`
                     : `<img src="images/${card.image}.jpeg" alt="Image">`;
                 
+                // Adding event listener to each card for text-to-speech functionality
                 cardElement.addEventListener('click', () => {
                     toggleSpeech(card.text);
                 });
@@ -146,30 +146,31 @@
 
         function toggleSpeech(text) {
             if (speechSynthesis.speaking) {
-                speechSynthesis.cancel();  // Para a fala atual
+                speechSynthesis.cancel();  // Stop current speech
             } else {
                 currentUtterance = new SpeechSynthesisUtterance(text);
-                currentUtterance.lang = 'en-US';  // Define o idioma como inglês (EUA)
-                speechSynthesis.speak(currentUtterance);  // Inicia a leitura do texto
+                currentUtterance.lang = 'en-US'; // Set the language to English (US)
+                speechSynthesis.speak(currentUtterance);  // Start speaking the text
             }
         }
 
+        // Function to generate PDF
         function generatePDF() {
             const { jsPDF } = window.jspdf;
             const doc = new jsPDF();
 
-            // Adicionando a logo
+            // Adding the logo
             doc.addImage('Logo.png', 'PNG', 85, 10, 40, 40);
 
-            // Adicionando campos de nome e data
+            // Adding name and date fields
             doc.setFontSize(12);
             doc.text("Name:_______________________________________________________  Date:_______________", 10, 60);
 
-            // Adicionando o título após nome e data
+            // Adding the title after name and date
             doc.setFontSize(20);
             doc.text(storyTitle, 105, 80, { align: "center" });
 
-            // Adicionando o texto da história com indentação explícita
+            // Adding the story text with explicit paragraph indentation
             doc.setFontSize(12);
             let y = 100;
             const marginLeft = 10;
