--- a/nivelA/unidade4/StoryCards/index.html
+++ b/nivelA/unidade4/StoryCards/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hannah StoryCard</title>
     <style>
-        /* Estilos existentes */
         body {
             font-family: 'Roboto', sans-serif;
             margin: 0;
@@ -18,7 +17,6 @@
             flex-direction: column;
             min-height: 100vh;
         }
-
         .container {
             max-width: 900px;
             width: 100%;
@@ -29,7 +27,6 @@
             border-radius: 10px;
             overflow: hidden;
         }
-
         button {
             margin: 20px;
             padding: 15px 30px;
@@ -40,7 +37,6 @@
             border-radius: 50px;
             cursor: pointer;
         }
-
         button:hover {
             background-color: #45a049;
         }
@@ -74,16 +70,19 @@
             // Verifica no console que o progresso foi salvo
             console.log(`Progresso da fase ${index} salvo no localStorage`);
 
-            // Aguarda meio segundo para garantir o salvamento antes de redirecionar
-            setTimeout(() => {
-                console.log('Redirecionando para o mapa...');
-                // Redireciona para o endereço correto da próxima fase
-                window.location.href = "https://gsroquette.github.io/hannahenglishcourse/nivelA/unidade4/StoryCards/index.html";
-            }, 500);  // Aguarda meio segundo antes de redirecionar
+            // Tente redirecionar imediatamente (sem timeout) para testar se há problema no redirecionamento
+            window.location.href = "https://gsroquette.github.io/hannahenglishcourse/nivelA/unidade4/StoryCards/index.html";
+
+            // Descomente o setTimeout se necessário
+            // setTimeout(() => {
+            //     console.log('Redirecionando para o mapa...');
+            //     window.location.href = "https://gsroquette.github.io/hannahenglishcourse/nivelA/unidade4/StoryCards/index.html";
+            // }, 500);  // Aguarda meio segundo antes de redirecionar
         }
 
         // Evento para chamar a função ao clicar no botão "Concluir Fase"
         document.getElementById('concluirFase').addEventListener('click', function() {
+            console.log("Botão 'Concluir Fase' clicado.");
             completePhase(0);  // Salva o progresso da fase 0 (primeira fase)
         });
 
