--- a/nivelA/unidade4/StoryCards/index.html
+++ b/nivelA/unidade4/StoryCards/index.html
@@ -25,7 +25,69 @@
             background-color: #fff;
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
             border-radius: 10px;
-            overflow: hidden;
+            overflow: hidden; /* Garante que nenhum conteúdo saia do contêiner */
+        }
+        h1 {
+            font-size: 2.5em;
+            color: #4CAF50;
+            margin-bottom: 30px;
+            text-align: center;
+        }
+        .title {
+            font-size: 2em;
+            color: #333;
+            margin: 20px 0;
+            text-align: center;
+        }
+        .card {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            margin-bottom: 20px;
+            padding: 20px;
+            background-color: #f0f8ff;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease;
+            cursor: pointer;
+            width: 100%;
+            max-width: 100%;
+            min-height: 100px;
+            box-sizing: border-box; /* Inclui padding e borda na largura e altura do card */
+        }
+        .card:hover {
+            transform: translateY(-5px);
+        }
+        .card img {
+            max-width: 100%;
+            max-height: calc(100vh - 150px); /* Garante que a imagem não ultrapasse a altura da viewport */
+            width: auto;
+            height: auto;
+            border-radius: 10px;
+            margin-bottom: 20px;
+            transition: transform 0.3s ease;
+        }
+        .card p {
+            font-size: 1.5em;
+            text-align: center;
+            color: #333;
+            margin: 0;
+            word-break: break-word;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            min-height: 100px;
+            width: 100%;
+            box-sizing: border-box;
+        }
+        .card-text {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            min-height: 300px; /* Tamanho mínimo para igualar ao tamanho da imagem */
+            width: 100%;
+            box-sizing: border-box;
         }
         button {
             margin: 20px;
@@ -35,64 +97,62 @@
             color: white;
             border: none;
             border-radius: 50px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             cursor: pointer;
+            transition: background-color 0.3s ease, box-shadow 0.3s ease;
         }
         button:hover {
             background-color: #45a049;
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+        }
+        button:active {
+            transform: scale(0.98);
+        }
+        .pdf-button {
+            margin-top: 30px;
+        }
+
+        /* Ajustes específicos para dispositivos móveis */
+        @media (max-width: 768px) {
+            .card img {
+                max-width: 100%;
+                max-height: 70vh;
+            }
+            .card p {
+                font-size: 1.2em;
+            }
         }
     </style>
 </head>
 <body>
-
-    <!-- Botão para voltar -->
-    <button onclick="window.location.href='../index.html'" style="margin: 20px; padding: 15px 30px; font-size: 18px; background-color: #4CAF50; color: white; border: none; border-radius: 50px; cursor: pointer;">
-        Back
-    </button>
+<button onclick="window.location.href='../index.html'" style="margin: 20px; padding: 15px 30px; font-size: 18px; background-color: #4CAF50; color: white; border: none; border-radius: 50px; cursor: pointer;">
+    Back
+</button>
 
     <div class="container">
         <h1>Hannah StoryCard</h1>
         <button id="toggleButton" onclick="toggleView()">Read the story</button>
-        <div class="title" id="storyTitle"></div>
+        <div class="title" id="storyTitle"></div> <!-- Title of the story will appear here -->
         <div id="cardsContainer"></div>
-        <button class="pdf-button" onclick="generatePDF()">Generate PDF</button>
+        <button class="pdf-button" onclick="generatePDF()">Generate PDF</button> <!-- PDF button here -->
     </div>
-
-    <!-- Botão para concluir a fase -->
-    <button id="concluirFase" style="margin-top: 20px;">Concluir Fase</button>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script>
-        // Função para salvar o progresso e redirecionar
-        function completePhase(index) {
-            // Salva o progresso da fase correta no localStorage usando o índice fornecido
-            localStorage.setItem(`phase_${index}_completed`, true);
-
-            // Verifica no console que o progresso foi salvo
-            console.log(`Progresso da fase ${index} salvo no localStorage`);
-
-            // Tente redirecionar imediatamente (sem timeout) para testar se há problema no redirecionamento
-            window.location.href = "https://gsroquette.github.io/hannahenglishcourse/nivelA/unidade4/StoryCards/index.html";
-
-            // Descomente o setTimeout se necessário
-            // setTimeout(() => {
-            //     console.log('Redirecionando para o mapa...');
-            //     window.location.href = "https://gsroquette.github.io/hannahenglishcourse/nivelA/unidade4/StoryCards/index.html";
-            // }, 500);  // Aguarda meio segundo antes de redirecionar
-        }
-
-        // Evento para chamar a função ao clicar no botão "Concluir Fase"
-        document.getElementById('concluirFase').addEventListener('click', function() {
-            console.log("Botão 'Concluir Fase' clicado.");
-            completePhase(0);  // Salva o progresso da fase 0 (primeira fase)
-        });
-
-        // Código existente para carregar o conteúdo e exibir os cartões
         let showText = false;
         let speechSynthesis = window.speechSynthesis;
         let currentUtterance = null;
-        let storyTitle = '';  // Variável para armazenar o título para o PDF
-        let storyText = '';   // Variável para armazenar o texto completo da história para o PDF
+        let storyTitle = ''; // Variable to hold the title for PDF generation
+        let storyText = '';  // Variable to hold the full story text for PDF
 
+        // Function to toggle between images and text
+        function toggleView() {
+            showText = !showText;
+            document.getElementById("toggleButton").innerText = showText ? "See the story" : "Read the story";
+            displayCards();
+        }
+
+        // Function to load images, text, and title dynamically
         async function loadContent() {
             const response = await fetch('images.txt');
             const text = await response.text();
@@ -100,15 +160,15 @@
             const cards = [];
             let currentImage = '';
             let currentText = '';
-            storyText = '';  // Limpa o texto da história para o PDF
+            storyText = '';  // Clear the story text for PDF
 
             lines.forEach(line => {
                 if (line.startsWith('#title:')) {
-                    storyTitle = line.replace('#title:', '').trim();  // Extraindo o título
+                    storyTitle = line.replace('#title:', '').trim();  // Extracting the title
                 } else if (line.startsWith('#')) {
                     if (currentImage && currentText) {
                         cards.push({ image: currentImage, text: currentText });
-                        storyText += '    ' + currentText + '\n';  // Adiciona indentação em cada parágrafo no PDF
+                        storyText += '    ' + currentText + '\n';  // Add indentation to each paragraph in PDF
                     }
                     currentImage = line.replace('#', '').trim();
                     currentText = '';
@@ -118,13 +178,14 @@
             });
             if (currentImage && currentText) {
                 cards.push({ image: currentImage, text: currentText });
-                storyText += '    ' + currentText + '\n';  // Adiciona indentação ao último parágrafo
+                storyText += '    ' + currentText + '\n';  // Add indentation to last paragraph
             }
 
             document.getElementById('storyTitle').innerText = storyTitle;
             return cards;
         }
 
+        // Function to display the cards dynamically
         async function displayCards() {
             const cards = await loadContent();
             const container = document.getElementById('cardsContainer');
@@ -136,6 +197,7 @@
                     ? `<div class="card-text"><p>${card.text}</p></div>`
                     : `<img src="images/${card.image}.jpeg" alt="Image">`;
                 
+                // Adding event listener to each card for text-to-speech functionality
                 cardElement.addEventListener('click', () => {
                     toggleSpeech(card.text);
                 });
@@ -144,52 +206,56 @@
             });
         }
 
+        // Function to start or stop speech synthesis
         function toggleSpeech(text) {
             if (speechSynthesis.speaking) {
-                speechSynthesis.cancel();  // Para a fala atual
+                speechSynthesis.cancel();  // Stop current speech
             } else {
                 currentUtterance = new SpeechSynthesisUtterance(text);
-                currentUtterance.lang = 'en-US';  // Define o idioma como inglês (EUA)
-                speechSynthesis.speak(currentUtterance);  // Inicia a leitura do texto
+                currentUtterance.lang = 'en-US'; // Set the language to English (US)
+                speechSynthesis.speak(currentUtterance);  // Start speaking the text
             }
         }
 
+        // Function to generate PDF with explicit paragraph indentation
         function generatePDF() {
             const { jsPDF } = window.jspdf;
             const doc = new jsPDF();
 
-            // Adicionando a logo
-            doc.addImage('Logo.png', 'PNG', 85, 10, 40, 40);
+            // Adding the logo
+            doc.addImage('Logo.png', 'PNG', 85, 10, 40, 40);  // Add logo with size 3x3 cm (40x40 in PDF units)
 
-            // Adicionando campos de nome e data
+            // Adding name and date fields
             doc.setFontSize(12);
             doc.text("Name:_______________________________________________________  Date:_______________", 10, 60);
 
-            // Adicionando o título após nome e data
+            // Adding the title after name and date
             doc.setFontSize(20);
             doc.text(storyTitle, 105, 80, { align: "center" });
 
-            // Adicionando o texto da história com indentação explícita
-            doc.setFontSize(12);
-            let y = 100;
+            // Adding the story text with explicit paragraph indentation
+            doc.setFontSize(12);  // Ensure the font size is set to 12
+            let y = 100;  // Initial position for the text
             const marginLeft = 10;
-            const maxLineWidth = 180;
-            const lineHeight = 10;
+            const maxLineWidth = 180;  // Maximum width for the text
+            const lineHeight = 10;  // Line height for the text
 
-            const splitText = doc.splitTextToSize(storyText, maxLineWidth);
+            const splitText = doc.splitTextToSize(storyText, maxLineWidth);  // Split the text to fit within the page width
             splitText.forEach(line => {
-                if (y > 280) {
-                    doc.addPage();
-                    y = 20;
+                if (y > 280) {  // Check if the text exceeds the page height
+                    doc.addPage();  // Add a new page if needed
+                    y = 20;  // Reset the y position for the new page
                 }
                 doc.text(line, marginLeft, y);
-                y += lineHeight;
+                y += lineHeight;  // Move to the next line
             });
 
-            doc.save("story.pdf");
+            doc.save("story.pdf");  // Save the PDF with filename 'story.pdf'
         }
 
+        // Initial load of the images and title
         displayCards();
     </script>
+
 </body>
 </html>
