--- a/Formulário/login.html
+++ b/Formulário/login.html
@@ -68,25 +68,35 @@
             const username = document.getElementById('username').value;
             const password = document.getElementById('password').value;
 
-            // Fazendo a requisição POST para o endpoint de login
-            const response = await fetch('/api/login', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                },
-                body: JSON.stringify({ username, password })
-            });
+            try {
+                // Fazendo a requisição POST para o endpoint de login
+                const response = await fetch('/api/login', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                    body: JSON.stringify({ username, password })
+                });
 
-            const result = await response.json();
+                const result = await response.json();
 
-            // Exibindo a resposta no frontend
-            const messageDiv = document.getElementById('message');
-            if (response.ok) {
-                messageDiv.style.color = 'green';
-                messageDiv.textContent = `Login bem-sucedido! Bem-vindo, ${result.user}.`;
-            } else {
-                messageDiv.style.color = 'red';
-                messageDiv.textContent = result.message || 'Erro ao fazer login.';
+                // Exibindo a resposta no frontend
+                const messageDiv = document.getElementById('message');
+                if (response.ok) {
+                    messageDiv.style.color = 'green';
+                    messageDiv.textContent = `Login bem-sucedido! Bem-vindo, ${result.user}.`;
+
+                    // Redirecionar para a página principal
+                    setTimeout(() => {
+                        window.location.href = "/hannahenglishcourse/index.html"; // Redireciona para a página principal
+                    }, 2000); // Atraso de 2 segundos antes do redirecionamento
+                } else {
+                    messageDiv.style.color = 'red';
+                    messageDiv.textContent = result.message || 'Erro ao fazer login.';
+                }
+            } catch (error) {
+                console.error('Erro:', error);
+                document.getElementById('message').textContent = 'Erro ao fazer login. Tente novamente mais tarde.';
             }
         });
     </script>
