--- a/Formulário/login.html
+++ b/Formulário/login.html
@@ -88,7 +88,7 @@
 
                     // Redirecionar para a página principal
                     setTimeout(() => {
-                        window.location.href = "/hannahenglishcourse/index.html"; // Redireciona para a página principal
+                        window.location.href = "../hannahenglishcourse/index.html"; // Redireciona para a página principal
                     }, 2000); // Atraso de 2 segundos antes do redirecionamento
                 } else {
                     messageDiv.style.color = 'red';
