--- a/Formulário/login.html
+++ b/Formulário/login.html
@@ -86,9 +86,9 @@
                     messageDiv.style.color = 'green';
                     messageDiv.textContent = `Login bem-sucedido! Bem-vindo, ${result.user}.`;
 
-                    // Redirecionar para a página principal
+                    // Redirecionar para o index.html que está um nível acima
                     setTimeout(() => {
-                        window.location.href = "../hannahenglishcourse/index.html"; // Redireciona para a página principal
+                        window.location.href = "../index.html"; // Subir um nível e ir para o index.html
                     }, 2000); // Atraso de 2 segundos antes do redirecionamento
                 } else {
                     messageDiv.style.color = 'red';
