--- a/Formulário/login.html
+++ b/Formulário/login.html
@@ -48,16 +48,30 @@
             margin-top: 20px;
             color: red;
         }
+        .register-link {
+            margin-top: 20px;
+            text-align: center;
+        }
+        .register-link a {
+            color: #007bff;
+            text-decoration: none;
+        }
+        .register-link a:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
     <div class="login-container">
         <h2>Login</h2>
         <form id="loginForm">
-            <input type="text" id="username" placeholder="Username" required>
+            <input type="text" id="username" placeholder="Username or Phone" required>
             <input type="password" id="password" placeholder="Password" required>
             <button type="submit">Login</button>
         </form>
+        <div class="register-link">
+            <p>Not registered? <a href="phone-login.html">Sign up here</a></p>
+        </div>
         <div id="message" class="message"></div>
     </div>
 
@@ -84,7 +98,7 @@
                 const messageDiv = document.getElementById('message');
                 if (response.ok) {
                     messageDiv.style.color = 'green';
-                    messageDiv.textContent = `Login bem-sucedido! Bem-vindo, ${result.user}.`;
+                    messageDiv.textContent = `Login successful! Welcome, ${result.user}.`;
 
                     // Redirecionar para o index.html que está um nível acima
                     setTimeout(() => {
@@ -92,11 +106,11 @@
                     }, 2000); // Atraso de 2 segundos antes do redirecionamento
                 } else {
                     messageDiv.style.color = 'red';
-                    messageDiv.textContent = result.message || 'Erro ao fazer login.';
+                    messageDiv.textContent = result.message || 'Error during login.';
                 }
             } catch (error) {
-                console.error('Erro:', error);
-                document.getElementById('message').textContent = 'Erro ao fazer login. Tente novamente mais tarde.';
+                console.error('Error:', error);
+                document.getElementById('message').textContent = 'Login failed. Try again later.';
             }
         });
     </script>
